--- a/pages/friends.htm
+++ b/pages/friends.htm
@@ -1,10 +1,11 @@
-title = "Users"
+title = "Friends"
 url = "/friends"
 layout = "default"
 is_hidden = 0
 
 [session]
-security = "all"
+security = "user"
+redirect = "login"
 ==
 <div class="container">
     {% set friends = user.getFriends() %}
